[package]
name = "axum-tonic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = "0.7"
http = "1.3"
hyper = { version = "1.6", features = ["full"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
tower = { version = "0.5", features = ["make", "steer"] }
reqwest = "0.12"

[build-dependencies]
tonic-build = "0.13"
